--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,16 @@
-name: anythingllm
+version: "3.9"
+
+#name: anythingllm
 
 networks:
-  anything-llm:
-    driver: bridge
+  network:
+    external:
+      name: appliance
 
 services:
-  anything-llm:
-    container_name: anythingllm
+  anything-llm-sqlagent-new:
+    container_name: anything-llm-sql-agent-new
+    image: anything-llm:new
     build:
       context: ../.
       dockerfile: ./docker/Dockerfile
@@ -22,10 +26,9 @@ services:
       - "../collector/outputs/:/app/collector/outputs"
     user: "${UID:-1000}:${GID:-1000}"
     ports:
-      - "3001:3001"
+      - "3015:3001"
     env_file:
       - .env
     networks:
-      - anything-llm
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "network"
+
