--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --ignore documents --ignore vector-cache --ignore storage --ignore swagger --trace-warnings index.js",
     "start": "NODE_ENV=production node index.js",
+    "vite": "NODE_ENV=development vite --debug --host=0.0.0.0",
     "lint": "yarn prettier --ignore-path ../.prettierignore --write ./endpoints ./models ./utils index.js",
     "swagger": "node ./swagger/init.js"
   },
@@ -29,6 +30,7 @@
     "@langchain/aws": "^0.0.5",
     "@langchain/community": "0.0.53",
     "@langchain/core": "0.1.61",
+    "@langchain/groq": "^0.0.15",
     "@langchain/openai": "0.0.28",
     "@langchain/textsplitters": "0.0.0",
     "@mintplex-labs/bree": "^9.2.5",
@@ -45,6 +47,7 @@
     "chromadb": "^1.5.2",
     "cohere-ai": "^7.9.5",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "dotenv": "^16.0.3",
     "elevenlabs": "^0.5.0",
     "express": "^4.18.2",
@@ -56,6 +59,7 @@
     "jsonrepair": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "langchain": "0.1.36",
+    "litellm": "^0.12.0",
     "mime": "^3.0.0",
     "moment": "^2.29.4",
     "mssql": "^10.0.2",
@@ -64,15 +68,20 @@
     "node-llama-cpp": "^2.8.0",
     "ollama": "^0.5.0",
     "openai": "4.38.5",
+    "papaparse": "^5.4.1",
     "pg": "^8.11.5",
     "pinecone-client": "^1.1.0",
     "pluralize": "^8.0.0",
     "posthog-node": "^3.1.1",
     "prisma": "5.3.1",
+    "sequelize": "^6.37.3",
     "slugify": "^1.6.6",
+    "sqlite": "^4.2.1",
+    "sqlite3": "^5.1.7",
     "swagger-autogen": "^2.23.5",
     "swagger-ui-express": "^5.0.0",
     "truncate": "^3.0.0",
+    "typeorm": "^0.3.20",
     "url-pattern": "^1.0.3",
     "uuid": "^9.0.0",
     "uuid-apikey": "^1.5.3",
@@ -94,6 +103,7 @@
     "hermes-eslint": "^0.15.0",
     "nodemon": "^2.0.22",
     "node-html-markdown": "^1.3.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vite": "^5.3.4"
   }
 }
